replaced deprecated <?, added fix for bztraffic

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	    <div class="aux">
 
 	    	<ul class="buttons">
-	    		<li class="developers-btn round"><a href="#"><strong tkey="sei-sviluppatore">Sei uno sviluppatore?</strong> <em tkey="collabora-progetto">collabora al progetto</em></a></li>
+	    		<li class="developers-btn round"><a href="https://github.com/tis-innovation-park/BZtraffic"><strong tkey="sei-sviluppatore">Sei uno sviluppatore?</strong> <em tkey="collabora-progetto">collabora al progetto</em></a></li>
 	    	</ul>
 	    	
 	    </div>
@@ -71,8 +71,8 @@
     	<div class="aux">
 	    	<h3><span tkey="app-progetto">Le app del progetto</span> <strong>Bolzano Traffic</strong></h3>
 			<ul>
-				<li class="bzparking"><a href="#"><img src="images/logo-bzparking.png" alt="BZ Parking" /></a></li>
-				<li class="bzbus"><a href="#"><img src="images/logo-bzbus.png" alt="BZ Bus" /></a></li>
+				<li class="bzparking"><a href="http://parking.bz.it/"><img src="images/logo-bzparking.png" alt="BZ Parking" /></a></li>
+				<li class="bzbus"><a href="http://bus.bz.it/"><img src="images/logo-bzbus.png" alt="BZ Bus" /></a></li>
 				<li class="bztraffic"><a href="#"><img src="images/logo-bztraffic.png" alt="BZ Traffic" /></a></li>
 			</ul>	
     	</div>
@@ -82,10 +82,10 @@
 		    <div class="aux2">
 		    	<ul>
 					<li class="eu"><a href="http://ec.europa.eu/environment/life/"></a></li>
-					<li class="ait"><a href="http://www.ait.ac.at/"></a></li>
 					<li class="integreen"><a href="http://www.integreen-life.bz.it/it/"></a></li>
 					<li class="bz"><a href="http://www.comune.bolzano.it/"></a></li>
 					<li class="tis"><a href="http://tis.bz.it/"></a></li>
+					<li class="ait"><a href="http://www.ait.ac.at/"></a></li>
 				</ul>
 		    </div>
 		    <div class="text">
