--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	    <div class="aux">
 
 	    	<ul class="buttons">
-	    		<li class="developers-btn round"><a href="https://github.com/tis-innovation-park/BZtraffic"><strong tkey="sei-sviluppatore">Sei uno sviluppatore?</strong> <em tkey="collabora-progetto">collabora al progetto</em></a></li>
+	    		<li class="developers-btn round"><a href="https://github.com/tis-innovation-park/BZtraffic" title="BZ-Traffic"><strong tkey="sei-sviluppatore">Sei uno sviluppatore?</strong> <em tkey="collabora-progetto">collabora al progetto</em></a></li>
 	    	</ul>
 	    	
 	    </div>
@@ -90,7 +90,7 @@
 				</ul>
 		    </div>
 		    <div class="text">
-			    <p>Codice licenziato sotto <a href="http://www.gnu.org/licenses/agpl-3.0.html">GNU Affero General Public License</a> pubblicato su <a href="https://github.com/ilvalle/parkbz">github</a><br />Powered by <a href="http://www.ethicalsoftware.it">Ethical Software</a><br />Designed by <a href="http://www.madeincima.it">Made in Cima</a></p>
+			    <p>Codice licenziato sotto <a href="http://www.gnu.org/licenses/agpl-3.0.html">GNU Affero General Public License</a> pubblicato su <a href="https://github.com/tis-innovation-park/BZtraffic" title="BZ-Traffic">github</a><br />Powered by <a href="http://www.ethicalsoftware.it">Ethical Software</a><br />Designed by <a href="http://www.madeincima.it">Made in Cima</a></p>
 				<p>Contatto: project [at] integreen-life.bz.it</p>
 			</div>
     	</div>
@@ -108,6 +108,6 @@
     <script src="scripts/bztraffic.js" type="text/javascript"> </script>
     <script src="libs/jquery-multilang/lang.js"></script>
 
-    <a href="https://github.com/ilvalle/parkbz" id="github">Fork me on GitHub</a>
+    <a href="https://github.com/tis-innovation-park/BZtraffic" title="Fork me" id="github">Fork me on GitHub</a>
 </body>
 </html>
