--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <footer id="footer-1" class="footer-1">
     	<div class="aux">
-	    	<h3><span tkey="app-progetto">Le app del progetto</span> <strong>Bolzano Traffic</strong></h3>
+	    	<h3><span tkey="app-progetto">Le app del progetto</span> <strong tkey ="municipality">Bolzano Traffic</strong></h3>
 			<ul>
 				<li class="bzparking"><a href="http://parking.bz.it/"><img src="images/logo-bzparking.png" alt="BZ Parking" /></a></li>
 				<li class="bzbus"><a href="http://bus.bz.it/"><img src="images/logo-bzbus.png" alt="BZ Bus" /></a></li>
