--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 				<span class="round">EN</span>
 				<ul class="round">
 					<li><a href="#">IT</a></li>
+					<li><a href="#">DE</a></li>
+					<li><a href="#">EN</a></li>
 				</ul>
 			</div>
 		</div>
