--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<ul class="round">
 					<li><a href="#">IT</a></li>
 					<li><a href="#">DE</a></li>
-					<li style="display: none;"><a href="#">EN</a></li>
+					<li><a href="#">EN</a></li>
 				</ul>
 			</div>
 		</div>
@@ -49,6 +49,9 @@
 				</ul>
 			</div>
 		</div>
+        <div id="credits">
+            map <a href="http://www.mapquest.com">Map Quest</a> & <a href="http://www.openstreetmap.org/">OpenStreetMap</a>
+        </div>
 		<div class="map-cont box">
             <div class="leaflet-popup-pane" id="popup-pane"></div>
             <div id="map" class='leaflet-container leaflet-retina leaflet-fade-anim'>
